Externalize config, fix Basic Auth, and preserve booking queue
Move DB/Redis/auth settings out of hardcoded constants into config.properties
(overridable via env vars) via a new AppConfig loader. Replace the deprecated
sun.misc Base64 encoder/decoder in UserAuth with java.util.Base64 and guard
against malformed Authorization headers. Fix BookingService so a resolved
booking attempt only removes its own entry from the Redis queue instead of
wiping out other users' pending attempts for the same show. Add JUnit tests
for UserAuth and AppConfig, and expand the README with full architecture,
API, and setup docs.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0195z7zSQ1yhNycH4NgHPmdM